--- a/index.html
+++ b/index.html
@@ -14,6 +14,8 @@
 
 <body data-ng-class="{ 'layout-fixed' : app.layout.isFixed, 'aside-collapsed' : app.layout.isCollapsed, 'layout-boxed' : app.layout.isBoxed, 'layout-fs': app.useFullLayout, 'hidden-footer': app.hiddenFooter, 'layout-h': app.layout.horizontal, 'aside-float': app.layout.isFloat}">
    <div data-ui-view="" data-autoscroll="false" class="wrapper"></div>
+   <!-- amap js api -->
+   <script src="http://webapi.amap.com/maps?v=1.3&key=127d6ce6526ef708712dbab822f2c45a"></script>
    <script src="app/js/base.js"></script>
    <script src="app/js/app.js"></script>
 </body>
