--- a/app/pages/login.html
+++ b/app/pages/login.html
@@ -1,6 +1,6 @@
 <div ng-controller="LoginFormController" class="block-center mt-xl wd-xl">
    <!-- START panel-->
-   <div class="panel panel-dark panel-flat">
+   <div class="panel panel-green panel-flat">
       <div class="panel-heading text-center">
          <a href="#">
             <img src="app/img/logo.png" alt="Image" class="block-center img-rounded" />
