--- a/index.html
+++ b/index.html
@@ -6,7 +6,8 @@
    <meta name="viewport" content="width=device-width, initial-scale=1, maximum-scale=1">
    <meta name="description" content="{{app.description}}">
    <meta name="keywords" content="app, responsive, angular, bootstrap, dashboard, admin">
-   <title data-ng-bind="pageTitle()">Angle - Angular Bootstrap Admin Template</title>
+   <title data-ng-bind="pageTitle()">帮大师 － 厂商后台管理系统</title>
+   <link rel="shortcut icon" href="app/img/logo-single.png" /> 
    <link rel="stylesheet" href="app/css/app.css" data-ng-if="!app.layout.isRTL">
    <link rel="stylesheet" href="app/css/theme-f.css">
    <link rel="stylesheet" href="app/css/app-rtl.css" data-ng-if="app.layout.isRTL">
